Revert "Fixed the issue where there was an invisible half way marker, need to refix the centered css class"
This reverts commit 2b865e9eb6a776ebb974ddb0dc92fdc727b9023e.

--- a/static/style.css
+++ b/static/style.css
@@ -101,9 +101,10 @@ btn {
   right: 15%;
 }
 .centered {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
